Fix header z-index and establish item record view styling

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -80,7 +80,7 @@
 }
 
 .home-secondary-navbar {
-    z-index: 10001;
+    z-index: 1003;
     border: none;
     background: $gray;
     &.navbar {
